--- a/index.html
+++ b/index.html
@@ -49,32 +49,34 @@
 
       <section id="home" class="home section">
         <div class="container">
-          <header class="header">
-            <div class="fittextjs">  
-              <h1 class="smile">We code</h1>
-              <h1>You smile</h1> 
-            </div>     
-            <div class="sub-header ">
+          <div class="header-wrapper">
+            <header class="header">  
+              <h1 class="fittextjs smile">We code</h1>
+              <h1 class="fittextjs">You smile</h1>
+            </header>    
+            <div class="sub-header">
               <hr>
               <p>Crafting clean and fresh awesomnes for the web and beyond.</p>
               <p>We make it funky. Want to work with us?</p>
             </div>
-          </header>
+          </div>
         </div>                 
       </section>
 
       <section id="work" class="work section">
         <div class="container">
-          <header class="header">
-            <div class="fittextjs"><h1>Works</h1></div>          
+          <div class="header-wrapper">
+            <header class="header">
+              <h1 class="fittextjs">Works</h1>
+            </header>         
             <div class="sub-header">
               <hr class="header_hr">
               <p>Some of our latest works.</p>
             </div>
-          </header>
+          </div>
 
-          <div id="portfolio">
-            <div class="content">
+          <div class="content">
+            <div id="portfolio">
               <ul id="gallery" class="tiles"></ul>
             </div>
           </div>
@@ -86,12 +88,12 @@
           <div class="header-wrapper">
             <header class="header">
               <h1 class="fittextjs">Services</h1>
-              <div class="sub-header">
-                <hr class="header_hr">
-                <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
-                <p>The finished product will be totally unique and represent awesomeness.</p>
-              </div>
             </header>
+            <div class="sub-header">
+              <hr class="header_hr">
+              <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
+              <p>The finished product will be totally unique and represent awesomeness.</p>
+            </div>
           </div>
 
           <div class="content tiles three">
@@ -116,15 +118,17 @@
           
       <section id="contact" class="contact section last">
         <div class="container">
-          <header class="header">
-            <div class="fittextjs hello"><h1>Say hello</h1></div>
-            <div class="fittextjs mail"><h1><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1></div>
+          <div class="header-wrapper">
+            <header class="header">
+              <h1 class="fittextjs hello">Say hello</h1>
+              <h1 class="fittextjs mail"><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1>
+            </header>
             <div class="sub-header">
               <hr>
               <p>Our vision is simple. We want to create websites and applications with both high quality design and easy-to-access content.</p>
               <p>The finished product will be totally unique and represent awesomeness.</p>
             </div>     
-          </header>
+          </div>
         </div>
       </section>
     </div>
