--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <section id="home" class="home section">
         <div class="container">
           <div class="header-wrapper">
-            <header class="header">  
-              <h1 class="fittextjs smile">We code</h1>
-              <h1 class="fittextjs">You smile</h1>
+            <header class="header fittextjs">  
+              <div class="smile">We code</div>
+              <div>You smile</div>
             </header>    
             <div class="sub-header">
               <hr>
@@ -66,8 +66,8 @@
       <section id="work" class="work section">
         <div class="container">
           <div class="header-wrapper">
-            <header class="header">
-              <h1 class="fittextjs">Works</h1>
+            <header class="header fittextjs">
+              <div>Works</div>
             </header>         
             <div class="sub-header">
               <hr class="header_hr">
@@ -86,8 +86,8 @@
       <section id="about" class="about section">
         <div class="container">
           <div class="header-wrapper">
-            <header class="header">
-              <h1 class="fittextjs">Services</h1>
+            <header class="header fittextjs">
+              <div>Services</div>
             </header>
             <div class="sub-header">
               <hr class="header_hr">
@@ -120,8 +120,8 @@
         <div class="container">
           <div class="header-wrapper">
             <header class="header">
-              <h1 class="fittextjs hello">Say hello</h1>
-              <h1 class="fittextjs mail"><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1>
+              <div class="fittextjs hello"><div>Say hello</div></div>
+              <div class="fittextjs mail"><div><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></div></div>
             </header>
             <div class="sub-header">
               <hr>
