--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
           <div class="content">
             <div id="portfolio">
-              <ul id="gallery" class="tiles"></ul>
+              <ul id="gallery" class="grid"></ul>
             </div>
           </div>
         </div>
@@ -180,6 +180,9 @@
   <script src="assets/js/jquery.fittext.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/supersized.3.2.5.js"></script>
-  <script src="assets/theme/supersized.shutter.js"></script>  
+  <script src="assets/theme/supersized.shutter.js"></script> 
+  <script type='text/javascript' id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.2.7.3.js'><\/script>".replace("HOST", location.hostname));
+//]]></script> 
   </body>
 </html>
