Fix grid class typo about section.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
           </div>
 
-          <div class="content tiles three">
+          <div class="content grid three">
             <div class="tile">
               <div class="img-wrapper"><img src="assets/images/understand.png" title="Understand" alt="Understand"></div>
               <hr>
