--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="assets/theme/supersized.shutter.css">
   
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis: 600|Lato:100,400,700,900:latin">
+
+  <script src="assets/js/modernizr.custom.07478.js"></script>
 
 </head>
 
