re-factorize setLayoutHeights.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/supersized.min.css">
   <link rel="stylesheet" href="assets/theme/supersized.shutter.css">
   
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis: 600|Lato:100,400,700,900:latin">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis: 600|Lato:100,200,400,700,900:latin">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
     <div id="sections"> 
 
       <section id="home" class="home section">
-        <div class="container">
+        <div class="container fullscreen">
           <div class="header-wrapper">
             <header class="header">  
               <h1 class="fittextjs smile">We code</h1>
@@ -115,7 +115,7 @@
       </section>
           
       <section id="contact" class="contact section last">
-        <div class="container">
+        <div class="container fullscreen">
           <div class="header-wrapper">
             <header class="header">
               <h1 class="fittextjs hello">Say hello</h1>
