redo centerContents and fit about grid.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     <div id="sections"> 
 
-      <section id="home" class="home section">
-        <div class="container fullscreen">
+      <section id="home" class="home section fullscreen">
+        <div class="container">
           <div class="header-wrapper">
             <header class="header">  
               <h1 class="fittextjs smile">We code</h1>
@@ -114,8 +114,8 @@
         </div>
       </section>
           
-      <section id="contact" class="contact section last">
-        <div class="container fullscreen">
+      <section id="contact" class="contact section last fullscreen">
+        <div class="container">
           <div class="header-wrapper">
             <header class="header">
               <h1 class="fittextjs hello">Say hello</h1>
