clean up/refactoring.

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <div id="site" class="state1">
     <div id="main-header">
     <header class="container">
-      <div id="logo" class="left">
+      <div id="logo">
         <a href="#" class="img-wrapper">
           <img src="assets/images/logo.png" alt="Enjoy-Mondays Logo" title="Home section">
           <span class="screen-reader-text">Enjoy Mondays</span>
         </a>
       </div>
 
-      <ul id="header-nav" class="right">
+      <ul id="header-nav">
         <li class="active-link"><a href="#home">Home</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#about">About</a></li>
@@ -37,7 +37,7 @@
         <li><a href="#notes">Notes</a></li>
       </ul> 
 
-      <div id="collapsed-menu" class="right">
+      <div id="collapsed-menu">
         <a href="#"><span class="screen-reader-text">Open menu</span></a>
       </div>
     </header>
@@ -45,10 +45,10 @@
 
     <div id="sections"> 
 
-      <section id="home" class="home section fullscreen">
+      <section id="home" class="home fullscreen">
         <div class="container">
           <div class="header-wrapper">
-            <header class="header">  
+            <header>  
               <h1 class="fittextjs smile">We code</h1>
               <h1 class="fittextjs">You smile</h1>
             </header>    
@@ -61,14 +61,14 @@
         </div>                 
       </section>
 
-      <section id="work" class="work section">
+      <section id="work" class="work">
         <div class="container">
           <div class="header-wrapper">
-            <header class="header">
+            <header>
               <h1 class="fittextjs">Works</h1>
             </header>         
             <div class="sub-header">
-              <hr class="header_hr">
+              <hr>
               <p>Some of our latest works.</p>
             </div>
           </div>
@@ -81,10 +81,10 @@
         </div>
       </section>
 
-      <section id="about" class="about section">
+      <section id="about" class="about">
         <div class="container">
           <div class="header-wrapper">
-            <header class="header">
+            <header>
               <h1 class="fittextjs">Services</h1>
             </header>
             <div class="sub-header">
@@ -114,10 +114,10 @@
         </div>
       </section>
           
-      <section id="contact" class="contact section last fullscreen">
+      <section id="contact" class="contact fullscreen">
         <div class="container">
           <div class="header-wrapper">
-            <header class="header">
+            <header>
               <h1 class="fittextjs hello">Say hello</h1>
               <h1 class="fittextjs mail"><a href="mailto:hola@enjoy-mondays.com">hola@enjoy-mondays.com</a></h1>
             </header>
@@ -131,8 +131,8 @@
       </section>
     </div>
 
-    <div class="footer">
-    <footer class="container">
+    <footer>
+    <div class="container">
       <div class="site-info">
         <p>2013©EnjoyMondays | Powered by <a href="https://github.com/goliatone/flatg-website" target="_blank" class="color-4"> FlatG</a></p>
       </div>
@@ -161,8 +161,8 @@
           </li>
         </ul>
       </div>
-    </footer>
     </div>
+    </footer>
   </div>
 
   <div id="slideshow">
