mod assets for assets2 for online version.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta name="author" content="Enjoy-Mondays" />
   <link rel="shortcut icon" href="favicon.ico"> 
     
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets2/css/style.css">
     
-  <link rel="stylesheet" href="assets/css/supersized.min.css">
-  <link rel="stylesheet" href="assets/theme/supersized.shutter.css">
+  <link rel="stylesheet" href="assets2/css/supersized.min.css">
+  <link rel="stylesheet" href="assets2/theme/supersized.shutter.css">
   
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:600|Lato:100,400,700,900:latin">
 </head>
@@ -24,7 +24,7 @@
     <header class="container">
       <div id="logo">
         <a href="#" class="img-wrapper">
-          <img src="assets/images/logo.png" alt="Enjoy-Mondays Logo" title="Home section">
+          <img src="assets2/images/logo.png" alt="Enjoy-Mondays Logo" title="Home section">
           <span class="screen-reader-text">Enjoy Mondays</span>
         </a>
       </div>
@@ -96,17 +96,17 @@
 
           <div class="content grid three">
             <div class="tile">
-              <div class="img-wrapper"><img src="assets/images/understand.png" title="Understand" alt="Understand"></div>
+              <div class="img-wrapper"><img src="assets2/images/understand.png" title="Understand" alt="Understand"></div>
               <hr>
               <p>Understand the business and competitive landscape. Learn how people interact with the brand and product. Identify strategic opportunities and design goals.</p>
             </div>
             <div class="tile">
-              <div class="img-wrapper"><img src="assets/images/create.png" title="Create" alt="Create"></div>
+              <div class="img-wrapper"><img src="assets2/images/create.png" title="Create" alt="Create"></div>
               <hr>
               <p>Create the best production on the planet. Combine smart interaction, interface, and visual design into a compelling product that resonates with the target audience.</p>
             </div>
             <div class="tile">
-              <div class="img-wrapper"><img src="assets/images/test.png" title="Test" alt="Test"></div>
+              <div class="img-wrapper"><img src="assets2/images/test.png" title="Test" alt="Test"></div>
               <hr>
               <p>Test concepts, designs, and prototypes with real users. Combine learnings with gut instinct and experience. Iterate, refine, and relentlessly hone in in the persuit of perfection.</p>
             </div>
@@ -141,23 +141,23 @@
         <ul id="social">
           <li id="github">
             <a href="http://github.com/goliatone" target="_blank">
-              <img src="assets/images/github.png" title="GitHub" alt="GitHub"></a>
+              <img src="assets2/images/github.png" title="GitHub" alt="GitHub"></a>
           </li>
           <li id="facebook">
             <a href="https://www.facebook.com/EnjoyMondays" target="_blank">
-              <img src="assets/images/facebook.png" title="Facebook" alt="Facebook"></a>
+              <img src="assets2/images/facebook.png" title="Facebook" alt="Facebook"></a>
           </li>
           <li id="twitter">
             <a href="http://twitter.com/EnjoyMondays" target="_blank">
-              <img src="assets/images/twitter.png" title="Twitter" alt="Twitter"></a>
+              <img src="assets2/images/twitter.png" title="Twitter" alt="Twitter"></a>
           </li>
           <li id="google">
             <a href="#">
-              <img src="assets/images/google+.png" title="Google+" alt="Google+"></a>
+              <img src="assets2/images/google+.png" title="Google+" alt="Google+"></a>
           </li>
           <li id="pinterest">
             <a href="http://www.pinterest.com/enjoyMondays/" target="_blank">
-              <img src="assets/images/pinterest.png" title="Pinterest" alt="Pinterest"></a>
+              <img src="assets2/images/pinterest.png" title="Pinterest" alt="Pinterest"></a>
           </li>
         </ul>
       </div>
@@ -173,12 +173,12 @@
     <a id="nextslide" class="load-item"></a>
   </div>
 
-  <script src="assets/js/jquery-2.1.3.min.js"></script>
-  <script src="assets/js/jquery.waypoints.js"></script>
-  <script src="assets/js/jquery.fittext.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/supersized.3.2.5.js"></script>
-  <script src="assets/theme/supersized.shutter.js"></script> 
+  <script src="assets2/js/jquery-2.1.3.min.js"></script>
+  <script src="assets2/js/jquery.waypoints.js"></script>
+  <script src="assets2/js/jquery.fittext.js"></script>
+  <script src="assets2/js/main.js"></script>
+  <script src="assets2/js/supersized.3.2.5.js"></script>
+  <script src="assets2/theme/supersized.shutter.js"></script> 
 
   </body>
 </html>
