testing rotate-in rotate-out

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="shortcut icon" href="favicon.ico"> 
     
   <link rel="stylesheet" href="assets2/css/style.css">
+  <!-- scroll effects-->
+  <link rel="stylesheet" href="assets2/scrollEffects/css/style.css">
     
   <link rel="stylesheet" href="assets2/css/supersized.min.css">
   <link rel="stylesheet" href="assets2/theme/supersized.shutter.css">
